--- a/src/app/leafedit/leafedit.component.html
+++ b/src/app/leafedit/leafedit.component.html
@@ -117,7 +117,7 @@
       <input type="text" id="why" name="annote_area" class="form-control mr-sm-2" [(ngModel)]="leafvalues.annotationtext" *ngIf="presentedit == 1">
       <br>
       <br>
-      <img [src]="server + '/' + leafvalues.leafname" id="blah"  width="200" height="200" /><br>
+      <img [src] ='image_path + leafvalues.leafname' (error) = "changeSource($event, leafvalues.leafname)" id="blah"  width="200" height="200" /><br>
       <button type="button" (click)="myFunction()" *ngIf="checkuserloggedin()" class="btn btn-danger"><span class="btn-text">Update Annotation</span></button>
       <div>
       <button type="button" (click)="presentedit = 0 && submitUpload()" class="btn btn-danger" *ngIf="presentedit == 1">Save</button>
