--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -83,14 +83,14 @@
 
     <div class="col-sm-3 col-sm-3" *ngIf="showleaftypes == 1">
       <form ngNativeValidate  *ngIf="family && family[presentleaf]">
-        <button type="button" (click)="deletefamily(family[presentleaf])" class="btn btn-danger" *ngIf="checkuserloggedin()">Delete</button>
+        <button type="button" (click)="deletefamily()" class="btn btn-danger" *ngIf="checkuserloggedin()">Delete</button>
         <button type="button" (click)="editfamily()" class="btn btn-danger" *ngIf="presentedit == 1 && checkuserloggedin()">Edit</button>
         <button type="button" (click)="savefamily()" class="btn btn-danger" *ngIf="presentedit == 0 && checkuserloggedin()">Save</button>
         <div class = "form-group">
           <label for = "scientificName">Scientific Name</label>
           <p><span *ngIf="presentedit == 1">{{family[presentleaf].scientificName}}</span>
             <input type = "text" class = "form-control" id = "scientificName" required *ngIf="presentedit == 0"
-                   [(ngModel)] = "family[0].scientificName" (keyup)="searchscientificName($event)" name = "scientificName">
+                   [(ngModel)] = "family[presentleaf].scientificName" (keyup)="searchscientificName($event)" name = "scientificName">
         </div>
         <div class = "form-group">
           <label for = "commonName">Common Name</label>
