--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -109,6 +109,7 @@ a {
 }
 
 .card-footer {
+  text-align: center;
   font-size: 1em;
   position: static;
   top: 0;
@@ -123,3 +124,19 @@ a {
 .card-inverse .btn {
   border: 1px solid rgba(0, 0, 0, .05);
 }
+figure {
+    display: inline-block;
+    margin: 20px;
+    float:left;
+    text-align: center;
+    border: 1px black;
+    border-style: solid;
+}
+figure img{
+  width:300px;
+  height: 200px;
+}
+figure figcaption {
+  display: block;
+  padding: 2px;
+  }
