Fix image resizing, search bar bugs and add clear button for search

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -150,10 +150,13 @@ figure {
     border-style: solid;
 }
 figure img{
-  width:300px;
-  height: 200px;
+  width: 15vw;
+  height: 18vh;
 }
 figure figcaption {
   display: block;
   padding: 2px;
   }
+.glyphicon {
+      pointer-events: all;
+    }
